Alignment issue fix

--- a/src/Component/Bottom.css
+++ b/src/Component/Bottom.css
@@ -3,7 +3,7 @@
     height: 49%;
     width: 49.9%;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row ;
   
     
     
