--- a/src/Component/Two.css
+++ b/src/Component/Two.css
@@ -1,7 +1,7 @@
 .two { 
     background-color:purple;
     height: 100%;
-    width: 33.3%;
+    width: 34%;
     border-right-style: solid;
     border-left-style: solid ;
     align-content:end;
